History
=======

Version 0.7.2 - Unreleased
--------------------------

- Allow pending subscriptions to be conformed by visiting the "My
  subscriptions" page.  This allows users to confirm their
  subscriptions even if they've lost or never received their message
  for confirm.  [nouri]

- More fine-tuning of the ``PloneCallHTMLFormatter``: Strip unwanted
  content like the review history in a configurable way.  [nouri]

Version 0.7.1 - 2008-09-05
--------------------------

- Added workaround for a bug in the composer where ``header_text`` or
  ``footer_text`` are ``None``.  No idea why they're ``None``, though.

Version 0.7.0 - 2008-09-05
--------------------------

- Added a new field ``subject`` for the composer.  This allows more
  control over what subject outgoing messages have, using string
  templates.  The default is ``${site_title}: ${channel_title}``.

  Removed the ``<h1>`` from the default composer template.  You can
  now use the ``header text`` of the composer to the same effect.  The
  default header text has now become ``<h1>${subject}</h1>`` to mimic
  the old behaviour.

  On the API side of things, I changed the signature of
  ``dancing.composer.HTMLComposer._vars``.  Since overriding this is
  the recommended way of providing your own variables, this warrants a
  0.7.0 release.  I'm thinking about adding a little variable provider
  component as an alternative to subclassing.
  [nouri]

- Added missing header with containing style and title tag in 
  ``composer-html-forgot.pt`` and ``composer-html-confirm.pt``. 
  [saily] 

Version 0.6.5 - 2008-09-04
--------------------------

- Add header and footer fields for the composer and its form.  This
  allows us to add text at the beginning and at the end of messages in
  an easy and consistent way. [nouri]

- Fix #264694: Using non ASCII characters in context title
  of send-newsletter raises ``UnicodeEncodeError``. [saily]

- Make ``PloneCallHTMLFormatter`` even more robust by switching to